--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -159,12 +159,12 @@
   }
 
   .job-subtitle {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .description {
     max-width: 100%;
-    font-size: 12px;
+    font-size: 13px;
   }
 }
 
